--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "herolo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ohadyeger.github.io/Herolo-Interview",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "immutable": "^4.0.0-rc.12",
+    "mongoose": "^5.9.25",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
